2005-09-08  Darin Adler  <darin@apple.com>

        Reviewed by Geoff.

        - updated to PCRE 6.1

        The original PCRE 6.1 sources are checked into the tree with the tag
        "pcre-6-1" for reference. What we're checking in right now is the original
        plus our changes to make it support UTF-16 and at least one other tweak
        (vertical tab considered whitespace). Our work to get our changes was
        done on "pcre-6-1-branch", with an anchor at "pcre-6-1-anchor" so you can
        see the evolution of the UTF-16 changes.
        
        Note also that there was one small change made here that's not on the branch
        in pcre_compile.c.

        * Info.plist: Updated the part of the copyright message that's about PCRE.

        * JavaScriptCore.xcodeproj/project.pbxproj: Added new PCRE source files,
        removed obsolete ones.

        * pcre/AUTHORS: Updated to PCRE 6.1. Includes credits for Apple's UTF-16
        changes, but not the credits for Google's C++ wrapper, since we don't include that.
        * pcre/COPYING: Updated to PCRE 6.1.
        * pcre/LICENCE: Ditto.
        * pcre/dftables.c: Ditto.
        * pcre/pcre-config.h: Ditto.
        * pcre/pcre.h: Ditto.

        * pcre/pcre_compile.c: Added for PCRE 6.1.
        * pcre/pcre_config.c: Ditto.
        * pcre/pcre_exec.c: Ditto.
        * pcre/pcre_fullinfo.c: Ditto.
        * pcre/pcre_get.c: Ditto.
        * pcre/pcre_globals.c: Ditto.
        * pcre/pcre_info.c: Ditto.
        * pcre/pcre_internal.h: Ditto.
        * pcre/pcre_maketables.c: Ditto.
        * pcre/pcre_ord2utf8.c: Ditto.
        * pcre/pcre_printint.c: Ditto.
        * pcre/pcre_refcount.c: Ditto.
        * pcre/pcre_study.c: Ditto.
        * pcre/pcre_tables.c: Ditto.
        * pcre/pcre_try_flipped.c: Ditto.
        * pcre/pcre_ucp_findchar.c: Ditto.
        * pcre/pcre_version.c: Ditto.
        * pcre/pcre_xclass.c: Ditto.
        * pcre/ucp.h: Ditto.
        * pcre/ucp_findchar.c: Ditto.